# nanobot.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: Format.yml  Test.yml
doc/: cgi.md  config.md  design.md  example.md  get.md  init.md
examples/: README.md
examples/penguins/: README.md  generate.py  generate_data.py  generate_views.py  nanobot.toml  static_views.sql
examples/penguins/src/resources/: custom.html
examples/penguins/src/schema/: column.tsv  datatype.tsv  message.tsv  table.tsv
examples/penguins/table/: README.md
examples/penguins/table/src/data/: penguin.tsv
examples/penguins/table/src/schema/: column.tsv  datatype.tsv  table.tsv
examples/penguins/tables/: README.md  nanobot.toml
examples/penguins/tables/src/schema/: column.tsv  island.tsv  region.tsv  sex.tsv  species.tsv  stage.tsv  table.tsv
nanobot/: README.md
src/: config.rs  error.rs  get.rs  get_cells.rs  init.rs  ldtab.rs  lib.rs  main.rs  serve.rs  sql.rs  term_tree_test_data_generation.rs  tree_validation.rs  tree_view.rs
src/javascript/: package-lock.json  package.json
src/javascript/src/: App.js  index.js
src/resources/: action.html  column.tsv  datatype.tsv  debug.html  default_config.toml  form.html  page.html  page.json  table.html  table.json  table.tsv  tree.html
src/resources/test_data/: ldtab.tsv  prefix.tsv  statement.tsv  zfa_excerpt.db  zfa_excerpt_for_term_trees.db
src/resources/test_data/ldtab_term_trees/: ZFA_0000354.hiccup  ZFA_0000354.json  ZFA_top_classes.hiccup
src/resources/test_data/ols_term_trees/: UBERON_0000956.json  UBERON_0002535.json  ZFA_0000354.json
src/resources/test_data/uberon/: 0000956.tsv  0002535.tsv
src/resources/test_data/zfa/: 0000354.tsv  top_level_classes.tsv
src/test/: README.md  mod.rs  ols_tree.rs  part_of_term_tree.rs  term_tree_test_data_generation.rs  tree_validation.rs
tests/: example_tests.sh  get_tests.rs  sql_tests.rs  term_property_json_shape.rs  term_tree.rs  tree_view_tests.rs
