[package]
name = "nanobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = [ "attributes" ] }
axum = "0.6.1"
clap = { version = "4.0.27", features = ["cargo", "derive"] }
enquote = "1.1.0"
futures = "0.3"
html-escape = "0.2.13"
lazy_static = "1.4.0"
minijinja = { version = "0.32.0", features = ["json", "urlencode", "preserve_order"]}
# ontodev_valve = "0.2.1"
regex = "1.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }
tabwriter = { version = "1.2.1" }
tokio = { version = "1.22.0", features = ["full"] }
tokio-test = "0.4.2"
toml = { version = "0.5.9" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
urlencoding = "2.1.2"
wiring_rs = { git = "https://github.com/ontodev/wiring.rs" }
itertools = "0.10.5"

[dependencies.ontodev_hiccup]
git = "https://github.com/ontodev/hiccup.rs"
rev = "fb8bfe02fc36389c89d335d81488d7d1da719c1f"

[dependencies.ontodev_valve]
# path = "../ontodev_demo/valve.rs"
git = "https://github.com/ontodev/valve.rs"
rev = "cd1339a750541fee4909e2982c2b4c9705e3a186"

[dependencies.ontodev_sqlrest]
# path = "../sqlrest.rs"
git = "https://github.com/ontodev/sqlrest.rs"
rev = "750c459c47b702761e05f88c58315dc0660daad1"

[build-dependencies]
cc = "1.0"
