[package]
name = "nanobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1", features = [ "attributes" ] }
axum = "0.6.18"
axum-test-helper = { version = "0.3.0", default-features = false, features = ["withouttrace"] }
clap = { version = "4.0.27", features = ["cargo", "derive"] }
csv = "1.2.2"
enquote = "1.1.0"
futures = "0.3"
html-escape = "0.2.13"
lazy_static = "1.4.0"
minijinja = { version = "0.32.0", features = ["json", "urlencode", "preserve_order", "source"]}
regex = "1.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-rustls", "any", "postgres", "sqlite" ] }
tabwriter = { version = "1.2.1" }
tokio = { version = "1.22.0", features = ["full"] }
tokio-test = "0.4.2"
toml = "0.7.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
urlencoding = "2.1.2"
url = "2.4.0"
wiring_rs = { git = "https://github.com/ontodev/wiring.rs" } 
async-recursion = "1.0.2"
reqwest = { version = "0.11.14", features = ["blocking"] }
itertools = "0.10.5" 
thiserror = "1.0"
indexmap = { version = "2.0.0", features = ["serde"] }
git2 = "0.17.2"
chrono = "0.4.26"
ansi-to-html = "0.1.3"
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
rustls-native-certs = "0.6.3"

[dependencies.ontodev_hiccup]
git = "https://github.com/ontodev/hiccup.rs"
rev = "f46fbd5450505644ed9970cef1ae14164699981f"

[dependencies.ontodev_valve]
# path = "../ontodev_demo/valve.rs"
git = "https://github.com/ontodev/valve.rs"
rev = "ece707684f7a836837ce7d079c103a27df6a85d7"

[dependencies.ontodev_sqlrest]
git = "https://github.com/ontodev/sqlrest.rs"
rev = "c063ac728d31ac4ea517fd423779d6c547639181"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
